# the-graveyard

./: Cargo.toml  main.rs
Class/: logs.txt  mining_multiprocessing.py  package-lock.json  package.json  weirdfuckshit.py
CppNotebook/: go.mod  main.go  notebook.json
Cronograma V3/: test.xlsx
Cronograma-V5-main/: Ui.py  calendario.py  readme.md
EjsClase/: go.mod  main.go
GravityFractal/: a.go  go.mod  main.go
ImgenAI/: a.json  go.mod  main.go
New folder/: Dockerfile
Parcial/: Equipos.cpp  Equipos.py  MOCK_DATA.csv  analyzer.py  app.py  battleship_gpt.py  gui.py  letra.txt  results.txt  temp.py  tests.py  threeshipt.py
RAG/: docs.py  embeddings.py  main.py  query.py  train.py
Taller/: conteo.py  votacion.py  votes.csv
Zig/: build.zig.zon
a/: a.cpp  llama3_output.txt
blogging/: .air.toml  Makefile  README.md  bun.lockb  (+7 more)
gl/: CMakeLists.txt  TestCube.gltf  TestModel.gltf  assimptest.go  fragment.fs  go.mod  go.sum  light_fragment.glsl  light_vertex.glsl  main.go  material_fragment.glsl  shader.go  stencil.fs  temp.txt  test.go  ui.go  vertex.vs
gl/buffers/: buffers.go  ebo.go  vao.go  vbo.go
gl/camera/: camera.go
gl/cameras/: camera.go
gl/loading/: customLoading.go
gl/meshes/: mesh.go
gl/models/: mesh.go  model.go  models.go
gl/resources/bot/: bot.mtl
gl/resources/sword/: TinyTruck.mtl
gl/sceneData/: backpack.go  bot.go  nada.go  scenes.go  stencil.go
gl/sceneHandler/: sceneHandler.go
gl/scenes/: scene.go
gl/shader/: shader.go
gl/shaders/: shader.go
gl/textures/: texture.go
gl/utils/: img.go
gl/vertex/: vertex.go
(+182 files in other folders)
